--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,3 +13,17 @@ jobs:
         uses: actions/checkout@v3
       - name: Print project tree
         run: tree .
+  
+  # build_and_push_to_docker_hub:
+  #   name: Push docker image to docker hub
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Check out the repository
+  #       uses: actions/checkout@v3
+  #     - name: Set up docker buildx
+  #       uses: docker/setup-buildx-action@v2
+  #     - name: Login to Docker
+  #       uses: docker/login-action@v2
+  #       with:
+  #         username: sergeiban
+  #         password: D
