--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,3 +33,26 @@ jobs:
           context: .
           push: true
           tags: sergeiban/pathfinder:latest
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs:
+      - build_and_push_to_docker_hub
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Executing remote ssh commands to deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          script: |
+            docker compose -f docker-compose.prod.yml pull
+            docker compose -f docker-compose.prod.yml down
+            docker compose -f docker-compose.prod.yml up -d
+            docker compose -f docker-compose.prod.yml exec backend python manage.py migrate
+            docker compose -f docker-compose.prod.yml exec backend python manage.py collectstatic
+            
