--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,5 @@ jobs:
             docker compose -f docker-compose.prod.yml pull
             docker compose -f docker-compose.prod.yml down
             docker compose -f docker-compose.prod.yml up -d
-            docker compose -f docker-compose.prod.yml exec backend python manage.py migrate
-            docker compose -f docker-compose.prod.yml exec backend python manage.py collectstatic
-            
+            docker compose -f docker-compose.prod.yml exec web python manage.py migrate
+            docker compose -f docker-compose.prod.yml exec web python manage.py collectstatic
