--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,14 @@ asgiref==3.11.0
 Django==6.0
 django-bootstrap5==25.3
 django-htmx==1.27.0
+et_xmlfile==2.0.0
 gunicorn==23.0.0
+numpy==2.4.2
+openpyxl==3.1.5
 packaging==25.0
+pandas==3.0.1
 psycopg2-binary==2.9.11
+python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+six==1.17.0
 sqlparse==0.5.4
